--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
-        <p class="panel-cover__description">Working as a Cybersecurity Analyst at Tata Consultancy Services<i class="fas fa-cloud"></i>.</p>
+        <p class="panel-cover__description">Data science student at University of North Texas<i class="fas fa-cloud"></i>.</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
         <div class="navigation-wrapper">
