--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
               <!-- Twitter -->
               <li class="navigation__item">
                 <a href="http://twitter.com/{{ site.author.twitter_username }}" title="@{{ site.author.twitter_username }} on Twitter" target="_blank">
-                  <!--<i class="icon icon-social-twitter"></i>-->
+                  <i class="icon icon-social-twitter"></i>
                   <i class="fab fa-twitter fa-lg"></i>
                   <span class="label">Twitter</span>
                 </a>
@@ -57,7 +57,7 @@
               <!-- GitHub -->
               <li class="navigation__item">
                 <a href="https://www.github.com/{{ site.author.github_username }}" title="{{ site.author.github_username }} on GitHub" target="_blank">
-                  <!--<i class="icon icon-social-github"></i>-->
+                  <i class="icon icon-social-github"></i>
                   <i class="fab fa-github fa-lg"></i>
                   <span class="label">GitHub</span>
                 </a>
