--- a/_includes/header.html
+++ b/_includes/header.html
@@ -79,7 +79,7 @@
               <!-- Email -->
               <li class="navigation__item">
                 <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
-                  <!--<i class="icon icon-mail"></i>-->
+                  <i class="icon icon-mail"></i>
                   <i class="fas fa-envelope fa-lg"></i>
                   <span class="label">Email</span>
                 </a>
